# NDBI048-toxicomania-report

./: .gitignore  NDBI048_David_Kubek_Geodata_Report.ipynb  README.md  geodata.dvc  pyproject.toml
.dvc/: config
